Add project links

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Hello World!</h1>
-<a href="stopwatch/index.html">Stopwatch</a>
+
+<a href="http://github.com/martinleolehner/gr-streamsink">gr-streamsink</a><br>
+<a href="http://github.com/martinleolehner/StreamSDR">StreamSDR</a><br>
+<a href="stopwatch/index.html">Stopwatch</a><br>
